--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Michał 'majkeloess' Saturczak page">
   <title>majkeloess</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://res.cloudinary.com/dq5exroyd/image/upload/v1704825597/ixxbd7nj0vjhjxfrfass.png"
+    type="image/x-icon">
+  <link rel="shortcut icon"
+    href="https://res.cloudinary.com/dq5exroyd/image/upload/v1704825597/ixxbd7nj0vjhjxfrfass.png" type="image/x-icon">
 </head>
 
 <body>
