--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     type="image/x-icon">
   <link rel="shortcut icon"
     href="https://res.cloudinary.com/dq5exroyd/image/upload/v1704825597/ixxbd7nj0vjhjxfrfass.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" async>
+
 </head>
 
 <body>
